<resources>
    <string name="app_name">AutoPhoneCall</string>
    <string name="call_to_number">Call to Number</string>
    <string name="receive_sms_from1">SMS from 1</string>
    <string name="receive_sms_from2">SMS from 2</string>
    <string name="gate_number">Gate Number</string>
    <string name="sms_sender">SMS sender</string>
    <string name="target_phone">target phone</string>
    <string name="source_phone">source phone</string>
    <string name="code_word">Code Word</string>
    <string name="what_will_trigger_phone_call">Word Triggers Phone Call</string>
</resources>